fix(colors): update colors to align with system changes (#254)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [ ] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] clarity.design website / infrastructure changes
- [x] Other... Please describe: 

## What is the current behavior?

Updates the design system variables slightly to improve accessibility
and align to work conducted during token migration.

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

--- a/projects/core/src/styles/theme.dark.scss
+++ b/projects/core/src/styles/theme.dark.scss
@@ -11,11 +11,11 @@
   --cds-global-typography-color-400: #{$cds-global-color-construction-100};
   --cds-global-typography-color-300: #{$cds-global-color-construction-200};
   --cds-global-typography-color-200: #{$cds-global-color-construction-300};
-  --cds-global-typography-color-100: #{$cds-global-color-construction-900};
+  --cds-global-typography-color-100: #{$cds-global-color-black};
   --cds-global-typography-link-color: #{$cds-global-color-blue-400};
-  --cds-global-typography-link-color-hover: #{$cds-global-color-blue-500};
+  --cds-global-typography-link-color-hover: #{$cds-global-color-blue-200};
   --cds-global-typography-link-color-visited: #{$cds-global-color-lavender-300};
-  --cds-global-typography-link-color-visited-hover: #{$cds-global-color-lavender-400};
+  --cds-global-typography-link-color-visited-hover: #{$cds-global-color-lavender-200};
 
   --cds-alias-object-app-background: #{$cds-global-color-construction-1000};
   --cds-alias-object-container-background: #{$cds-global-color-construction-900};
@@ -34,32 +34,33 @@
   --cds-alias-object-interaction-color-active: #{$cds-global-color-construction-100};
   --cds-alias-object-interaction-color-selected: #{$cds-global-color-construction-200};
   --cds-alias-object-interaction-color-disabled: #{$cds-global-color-construction-600};
-  --cds-alias-object-interaction-background: #{$cds-global-color-construction-900};
-  --cds-alias-object-interaction-background-hover: #{$cds-global-color-construction-700};
+  --cds-alias-object-interaction-background: #{$cds-global-color-construction-1000};
+  --cds-alias-object-interaction-background-hover: #{$cds-global-color-construction-600};
   --cds-alias-object-interaction-background-active: #{$cds-global-color-construction-800};
   --cds-alias-object-interaction-background-selected: #{$cds-global-color-construction-700};
-  --cds-alias-object-interaction-background-disabled: #{$cds-global-color-construction-900};
+  --cds-alias-object-interaction-background-disabled: #{$cds-global-color-construction-700};
   --cds-alias-object-interaction-background-highlight: #{$cds-global-color-blue-400};
+  --cds-alias-object-interaction-border-color: #{$cds-global-color-construction-300};
 
   --cds-alias-status-tint: transparent;
   --cds-alias-status-info: #{$cds-global-color-blue-400};
-  --cds-alias-status-info-tint: #{$cds-global-color-blue-700};
-  --cds-alias-status-info-shade: #{$cds-global-color-blue-700};
+  --cds-alias-status-info-tint: #{$cds-global-color-blue-800};
+  --cds-alias-status-info-shade: #{$cds-global-color-blue-500};
   --cds-alias-status-success: #{$cds-global-color-green-500};
-  --cds-alias-status-success-tint: #{$cds-global-color-green-700};
-  --cds-alias-status-success-shade: #{$cds-global-color-green-700};
+  --cds-alias-status-success-tint: #{$cds-global-color-green-800};
+  --cds-alias-status-success-shade: #{$cds-global-color-green-600};
   --cds-alias-status-warning: #{$cds-global-color-ochre-400};
-  --cds-alias-status-warning-tint: #{$cds-global-color-ochre-500};
+  --cds-alias-status-warning-tint: #{$cds-global-color-ochre-600};
   --cds-alias-status-warning-shade: #{$cds-global-color-ochre-500};
-  --cds-alias-status-warning-dark: #{$cds-global-color-ochre-500};
+  --cds-alias-status-warning-dark: #{$cds-global-color-ochre-700};
   --cds-alias-status-danger: #{$cds-global-color-red-500};
-  --cds-alias-status-danger-dark: #{$cds-global-color-red-800};
-  --cds-alias-status-danger-tint: #{$cds-global-color-red-700};
-  --cds-alias-status-danger-shade: #{$cds-global-color-red-700};
+  --cds-alias-status-danger-tint: #{$cds-global-color-red-800};
+  --cds-alias-status-danger-shade: #{$cds-global-color-red-600};
+  --cds-alias-status-danger-dark: #{$cds-global-color-red-900};
   --cds-alias-status-neutral: #{$cds-global-color-construction-300};
-  --cds-alias-status-neutral-tint: #{$cds-global-color-construction-500};
-  --cds-alias-status-neutral-shade: #{$cds-global-color-construction-500};
+  --cds-alias-status-neutral-tint: #{$cds-global-color-construction-700};
+  --cds-alias-status-neutral-shade: #{$cds-global-color-construction-400};
   --cds-alias-status-disabled: #{$cds-global-color-construction-600};
   --cds-alias-status-disabled-tint: #{$cds-global-color-construction-700};
-  --cds-alias-status-disabled-shade: #{$cds-global-color-construction-900};
+  --cds-alias-status-disabled-shade: #{$cds-global-color-construction-500};
 }
